--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ sshkeys = "0.3"
 reqwest = { version = "0.11", features = ["json"] }
 flate2 = "1.0"
 bitvec = "0.20"
+clear_on_drop = "0.2.4"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 chrono = { version = "0.4", features = ["serde"] }
