--- a/did-pkh/Cargo.toml
+++ b/did-pkh/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
 bs58 = { version = "0.4", features = ["check"] }
+bech32 = "0.8"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["macros", "rt"] }
