--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,10 @@ example-http-issuer = []
 
 [dependencies]
 json-ld = "0.4"
-bbs = "0.4.1"
-pairing-plus = "0.19"
+# SAFETY: bbs and pairing-plus are set to specific versions due to a
+# dependency on internal struct representations using transmute in src/bbs.rs.
+bbs = "=0.4.1"
+pairing-plus = "=0.19.0"
 ff = { version = "0.6", package = "ff-zeroize" }
 hkdf = "0.8"
 zeroize = { version = "1.4", features = ["zeroize_derive"] }
