--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,3 +69,6 @@ jobs:
       run: |
         rustup target add wasm32-unknown-unknown
         cargo check --workspace --target wasm32-unknown-unknown
+
+    - name: Test Aleo signatures
+      run: cargo test --features=aleosig
