--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ http-did = ["hyper", "hyper-tls", "http", "percent-encoding", "tokio"]
 libsecp256k1 = ["secp256k1"]                                           # backward compatibility
 secp256k1 = ["k256", "rand", "k256/keccak256"]
 secp256r1 = ["p256", "rand"]
+aleosig = ["rand", "blake2", "snarkvm-dpc", "snarkvm-algorithms", "snarkvm-curves", "snarkvm-utilities", "snarkvm-parameters"]
 ripemd-160 = ["ripemd160", "secp256k1"]
 # TODO handle better keccak and sha
 keccak = ["keccak-hash", "secp256k1", "k256/keccak256"]
@@ -69,6 +70,7 @@ serde_urlencoded = "0.7"
 percent-encoding = { version = "2.1", optional = true }
 tokio = { version = "1.0", optional = true, features = ["macros"] }
 blake2b_simd = "0.5"
+blake2 = { version = "0.9", optional = true }
 bs58 = { version = "0.4", features = ["check"] }
 thiserror = "1.0"
 keccak-hash = { version = "0.7", optional = true }
@@ -85,6 +87,13 @@ flate2 = "1.0"
 bitvec = "0.20"
 clear_on_drop = "0.2.4"
 url = { version = "2.2", features = ["serde"] }
+rand_xorshift = "0.3"
+bech32 = "0.8"
+snarkvm-dpc = { version = "0.7.9", optional = true }
+snarkvm-algorithms = { version= "0.7.9", optional = true }
+snarkvm-curves = { version= "0.7.9", optional = true }
+snarkvm-utilities = { version = "0.7.9", optional = true }
+snarkvm-parameters = { version = "0.7.9", optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 chrono = { version = "0.4", features = ["serde"] }
@@ -109,7 +118,7 @@ members = [
 ]
 
 [dev-dependencies]
-blake2 = "0.8"                                         # for bbs doctest
+blake2_old = { package = "blake2", version = "0.8" } # for bbs doctest
 uuid = { version = "0.8", features = ["v4", "serde"] }
 difference = "2.0"
 did-method-key = { path = "./did-key" }
