--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,3 +111,7 @@ uuid = { version = "0.8", features = ["v4", "serde"] }
 difference = "2.0"
 did-method-key = { path = "./did-key" }
 tokio = { version = "1.0", features = ["macros"] }
+
+[package.metadata.docs.rs]
+features = ["secp256r1", "secp256k1", "ripemd-160", "http-did"]
+rustdoc-args = ["--cfg", "docsrs"]
