--- a/did-webkey/Cargo.toml
+++ b/did-webkey/Cargo.toml
@@ -12,9 +12,7 @@ homepage = "https://github.com/spruceid/ssi/tree/main/did-webkey/"
 documentation = "https://docs.rs/did-webkey/"
 
 [features]
-default = ["ssi/ring", "crypto-nettle"]
-crypto-cng = ["sequoia-openpgp/crypto-cng"]
-crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
+default = ["ssi/ring"]
 p256 = ["ssi/p256"]
 
 [dependencies]
@@ -30,13 +28,8 @@ serde_json = "1.0.75"
 serde = { version = "1.0.134", features = ["derive"] }
 sshkeys = "0.3.1"
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-sequoia-openpgp = { version = "1.7.0", features = [
-    "compression-deflate",
-], default-features = false, optional = true }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
 sequoia-openpgp = { version = "1.7.0", default-features = false, features = [
+    "compression-deflate",
     "crypto-rust",
     "allow-experimental-crypto",
     "allow-variable-time-crypto",
