--- a/did-ion/Cargo.toml
+++ b/did-ion/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_jcs = "0.1"
 anyhow = "1.0"
+thiserror = "1.0"
 base64 = "0.12"
 sha2 = "0.10"
 json-patch = "0.2.6"
