--- a/did-key/Cargo.toml
+++ b/did-key/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://github.com/spruceid/ssi/tree/main/did-key/"
 documentation = "https://docs.rs/did-key/"
 
 [features]
+default = ["ssi/ring"]
 secp256k1 = ["k256", "ssi/secp256k1"]
 secp256r1 = ["p256", "ssi/secp256r1"]
 
