--- a/did-pkh/Cargo.toml
+++ b/did-pkh/Cargo.toml
@@ -11,6 +11,9 @@ repository = "https://github.com/spruceid/ssi/"
 homepage = "https://github.com/spruceid/ssi/tree/main/did-pkh/"
 documentation = "https://docs.rs/did-pkh/"
 
+[features]
+default = ["ssi/ring"]
+
 [dependencies]
 ssi = { version = "0.4", path = "../", default-features = false, features = ["secp256k1", "keccak-hash", "secp256r1", "ripemd160"] }
 chrono = { version = "0.4", features = ["serde"] }
