--- a/did-web/Cargo.toml
+++ b/did-web/Cargo.toml
@@ -11,6 +11,9 @@ repository = "https://github.com/spruceid/ssi/"
 homepage = "https://github.com/spruceid/ssi/tree/main/did-web/"
 documentation = "https://docs.rs/did-web/"
 
+[features]
+default = ["ssi/ring"]
+
 [dependencies]
 ssi = { version = "0.4", path = "../", default-features = false }
 async-trait = "0.1"
