--- a/.github/workflows/update_contexts.yml
+++ b/.github/workflows/update_contexts.yml
@@ -23,3 +23,4 @@ jobs:
         title: Update context files
         labels: github_actions
         body: 'Auto-generated: https://github.com/spruceid/ssi/actions/runs/${{ github.run_id }}'
+        author: ssi <noreply@didkit.dev>
