--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ example-http-issuer = []
 json-ld = "0.4"
 # SAFETY: bbs and pairing-plus are set to specific versions due to a
 # dependency on internal struct representations using transmute in src/bbs.rs.
-bbs = "=0.4.1"
+bbs = { version = "=0.4.1", optional = true }
 pairing-plus = "=0.19.0"
 ff = { version = "0.6", package = "ff-zeroize" }
 hkdf = "0.8"
