--- a/did-test/Cargo.toml
+++ b/did-test/Cargo.toml
@@ -9,13 +9,13 @@ publish = false
 
 [dependencies]
 ssi = { version = "0.4", path = "../" }
-did-method-key = { version = "0.1", path = "../../ssi/did-key", features = ["secp256k1", "secp256r1"] }
-did-tz = { version = "0.1", path = "../../ssi/did-tezos", default-features = false, features = ["secp256k1", "secp256r1"] }
-did-pkh = { version = "0.1", path = "../../ssi/did-pkh" }
-did-sol = { version = "0.0.1", path = "../../ssi/did-sol" }
-did-web = { version = "0.1", path = "../../ssi/did-web" }
-did-webkey = { version = "0.1", path = "../../ssi/did-webkey", features = ["p256"] }
-did-onion = { version = "0.1", path = "../../ssi/did-onion" }
+did-method-key = { version = "0.1", path = "../did-key", features = ["secp256k1", "secp256r1"] }
+did-tz = { version = "0.1", path = "../did-tezos", default-features = false, features = ["secp256k1", "secp256r1"] }
+did-pkh = { version = "0.1", path = "../did-pkh" }
+did-sol = { version = "0.0.1", path = "../did-sol" }
+did-web = { version = "0.1", path = "../did-web" }
+did-webkey = { version = "0.1", path = "../did-webkey", features = ["p256"] }
+did-onion = { version = "0.1", path = "../did-onion" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.12"
