--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ simple_asn1 = "^0.5.2"
 num-bigint = "0.4"
 async-std = { version = "1.9", features = ["attributes"] }
 async-trait = "0.1"
+async-recursion = "1.0"
 json = "^0.12"
 futures = "0.3"
 iref = "^2.0.3"
@@ -89,6 +90,7 @@ snarkvm-algorithms = { version= "0.7.9", optional = true }
 snarkvm-curves = { version= "0.7.9", optional = true }
 snarkvm-utilities = { version = "0.7.9", optional = true }
 snarkvm-parameters = { version = "0.7.9", optional = true }
+serde_with = "1.14"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 chrono = { version = "0.4", features = ["serde"] }
