--- a/ssi-vc/Cargo.toml
+++ b/ssi-vc/Cargo.toml
@@ -29,6 +29,9 @@ flate2 = "1.0"
 bitvec = "0.20"
 base64 = "0.12"
 reqwest = { version = "0.11", features = ["json"] }
+cacaos = { version = "0.5" }
+capgrok = { version = "=0.3.0" }
+libipld = { version = "0.14" }
 ssi-jwt = { path = "../ssi-jwt", version = "0.1" }
 ssi-jws = { path = "../ssi-jws", version = "0.1" }
 ssi-jwk = { path = "../ssi-jwk", version = "0.1" }
@@ -48,5 +51,6 @@ async-std = { version = "1.9", features = ["attributes"] }
 multibase = "0.8"
 hex = "0.4"
 k256 = { version = "0.11", features = ["ecdsa"] }
+keccak-hash = { version = "0.7" }
 serde_jcs = "0.1"
 ssi-crypto = { path = "../ssi-crypto", version = "0.1"}
