--- a/ssi-vc/Cargo.toml
+++ b/ssi-vc/Cargo.toml
@@ -30,7 +30,7 @@ bitvec = "0.20"
 base64 = "0.12"
 reqwest = { version = "0.11", features = ["json"] }
 cacaos = { version = "0.5" }
-capgrok = { version = "=0.3.0" }
+siwe-recap = { version = "0.1" }
 libipld = { version = "0.14" }
 ssi-jwt = { path = "../ssi-jwt", version = "0.1" }
 ssi-jws = { path = "../ssi-jws", version = "0.1" }
