Add `did-jwk` support (#466)
* Add did-jwk support

Signed-off-by: Tiago Nascimento <tiago.nascimento@spruceid.com>

* Add error when private key material present in did:jwk on dereference

Signed-off-by: Tiago Nascimento <tiago.nascimento@spruceid.com>

* Remove TODO; Add serde_jcs::to_string unwrap handling in generate

Signed-off-by: Tiago Nascimento <tiago.nascimento@spruceid.com>

Signed-off-by: Tiago Nascimento <tiago.nascimento@spruceid.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ ssi-caips = { path = "./ssi-caips", version = "0.1" }
 [workspace]
 members = [
   "did-tezos",
+  "did-jwk",
   "did-key",
   "did-web",
   "did-ethr",
